tests/test-dirs/upstream-typing-recovery/original-tests/unify_errors.compilers.reference
File "unify_errors.ml", line 1:
Error: Multiple errors were encountered
File "unify_errors.ml", line 10, characters 14-21:
10 | let x : int = "hello"
                   ^^^^^^^
  This constant has type string but an expression was expected of type int
File "unify_errors.ml", line 15, characters 13-27:
15 |   | false -> "not a number"
                  ^^^^^^^^^^^^^^
  This constant has type string but an expression was expected of type int
File "unify_errors.ml", line 18, characters 9-10:
18 |   1 + f [x]
              ^
  The value x has type 'a list but an expression was expected of type 'a
  The type variable 'b occurs inside 'b list
